--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3"
   },
